mandates content changes

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -5,80 +5,47 @@ order: 4
 visible_in_sidebar: true
 ---
 
-## Autopay
-
-<Row>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <a href="/payments/umap/merchant-onboarding" target="_blank">
-                Aggregator Merchant Onboarding ↗
-            </a>
-            <p>
-                If you are an aggregator explore other UMAP products here
-            </p>
-        </Card>
-    </Portion>
-    <Portion desktopSpan="half">
-        <Card padding="small" shape="rounded">
-            <a href="/payments/umap/api-integration/merchants" target="_blank">
-                Merchant API Integration ↗
-            </a>
-            <p>
-                If you are a merchant explore other UMAP products here
-            </p>
-        </Card>
-    </Portion>
-</Row>
+# UPI Mandates
 
 <hr class="primary"/>
 
-#### What is UPI Autopay ?
+### What is UPI Autopay ?
 
-Unified Payments Interface (UPI) autopay or mandates represent a transformative feature within India's digital payment ecosystem, enabling a seamless and automated way to facilitate recurring transactions.
+UPI Autopay is a recurring payments product built on the same rails of UPI which enables businesses to create subscriptions or one-time block based payments seamless via the user's favourite UPI app.  
 
-As an integral component of the UPI framework, UPI autopay offer businesses and consumers the convenience of setting up pre-authorized one time / recurring debits for various types of payments such as utility bills, subscription fees, EMIs, and more. This feature not only simplifies the payment process but also enhances the reliability and efficiency of managing recurring financial commitments.
+### What can I do with UPI Autopay ?
+* Enable limited stock purchases like IPO investments on your wealth app
+* Create seamless subcsriptions for your services directly from UPI apps
+* Reimagine Cash on Delivery and Try & Buy with single block multi debits
 
-Mandate creation / registration is a one time activity and it allows the customer's account to be debited as per the agreed terms and conditions and recurrence schedule.
-
-#### What can I do with UPI Autopay ?
-
-Here is a list of sample use cases for the UPI Autopay products offered by UMAP
-- **Recurring mandates** can be used to collect recurring payments for use cases like **Subscriptions**, **Loan Repayments**, **Post Paid Bills**, **Mutual Fund SIPs** etc.
-For example,
-    - Stage offers streaming services. They offer a one week free trial for their users after which the user can signup for monthly plans.
-Stage doesn't want to be responsible for notifying the user and collecting payment for every subsequent subscription renewal
-To support this use case Stage can integrate with UMAP mandates to
-offer creation of a monthly UPI mandate on their website/app. 
-When a customer signs up for a monthly subscription plan, Stage registers a monthly mandate via UMAP
-and UMAP takes care of notifying the customer and executing / debiting the customer on a monthly basis.
-- **One time mandates** can be used to support use cases like **IPO Applications**, **Hotel reservations**, etc.
-For example, Zerodha wants to enable users to apply for an IPO on their platform. Based on allocation of shares decided by the sponsor bank, debit should/shouldn't happen for a user.
-To support this use case Zerodha can integrate with UMAP mandates to
-offer creation of a one time UPI mandate on their platform. 
-When a customer signs up for a monthly subscription plan, Stage registers a monthly mandate via UMAP
-and UMAP takes care of notifying the customer and executing / debiting the customer on a monthly basis.
-- **Single block multi debit mandates** can be used to support use cases for **securities brokers and dealers**
-
-#### Exlore our UPI autopay products
-
-- **One time mandates**: A one time mandate is a mandate that can only be executed / debited once.
-- **Recurring mandates**: A recurring mandate is a mandate that that can be executed / debited multiple times as per the recurrence pattern configured / agreed upon during mandate creation.
-- **Single block multi debit mandates**: A single block mutli debit mandate is a mandate that blocks a requested amount of funds in the customer's account and can be executed / debited multiple times against blocked funds.
+##### Exlore our UPI autopay products
 
 <UMAPMandates />
 
-#### Key Features
+### Key Features
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/autopay-key-features/autopay-key-features.png"
+    src="https://storage.googleapis.com/strapi-assets/latest/Frame_106/Frame_106.png"
     alt="Bridge"
 />
 
-#### UPI autopay statuses
+### UPI autopay statuses
 
 A UPI autopay will flow through the below statuses throughout its lifecycle -
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/upi-mandate-statuses/upi-mandate-statuses.png"
+    src="https://storage.googleapis.com/strapi-assets/latest/Frame_109/Frame_109.png"
     alt="Bridge"
 />
+
+`Mandate Initiated :` A mandate creation request has been initiated. 
+
+`Mandate Live :` Customer authorization received & mandate is now active. 
+
+`Mandate Complete :` Mandate executions are done, and now mandate is closed.  
+
+`Mandate Rejected:` Due to error or no authorization, mandate could not be created.   
+
+`Mandate Paused:` Customer has decided to temporarily stop executions on mandate.   
+
+`Mandate Revoked:` Mandate was closed by customer or merchant before expiry. 
