--- a/content/payments/umap/mandates/recurring.mdx
+++ b/content/payments/umap/mandates/recurring.mdx
@@ -22,11 +22,11 @@ visible_in_sidebar: true
 
 A recurring mandate is a mandate that that can be executed / debited multiple times as per the recurrence pattern configured / agreed upon during mandate creation.
 
-`TODO : Write a few lines on recurring mandates`
-
-#### What can I do with a Recurring Mandate ?
-
-`TODO : Write a few lines on recurring mandate use cases`
+#### What can I do with a Recurring Mandate ?  
+Recurring mandates help merchants seamless collect money multiple times with a single setup.
+* Create subscriptions for your streaming services & SAAS businesses
+* Automate memberships to your physical venues with automatic payments
+* Power daily savings/investment related features for your customers
 
 <hr class="primary" />
 
