feedback changes from amlan.

--- a/content/payments/umap/api-integration/aggregators.mdx
+++ b/content/payments/umap/api-integration/aggregators.mdx
@@ -23,12 +23,14 @@ Once the aggregator has been onboarded onto bridge and business formalities have
 An aggregator on UMAP has to first create a merchant associated with them by providing merchant's business details and creating a VPA for the merchant which will associate them to the aggregator. The aggregator can now begin configuring UPI products for the merchant.  
 
 <Card padding="small" shape="rounded">
-    <a href="/payments/umap/merchant-onboarding" target="_self">
-        Merchant Onboarding
-    </a>
-    <p>
-        Create your first merchant on UMAP
-    </p>
+    <Link href="/payments/umap/merchant-onboarding">
+        <Element as="div">
+            <Text size="large" weight="600" textColor="blue-90">
+                 Merchant Onboarding
+            </Text>
+            <Text weight="400">Create your first merchant on UMAP.</Text>
+        </Element>
+    </Link>
 </Card>
 
 <hr class="primary" />
