--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -38,4 +38,5 @@ UMAP sends notifications to merchants for the following products
     <li>Mandates. Read more <a href="/payments/umap/notifications/mandates" target="_blank">here</a></li>
     <li>Refunds. Read more <a href="/payments/umap/notifications/refunds" target="_blank">here</a></li>
     <li>Disputes. Read more <a href="/payments/umap/notifications/disputes" target="_blank">here</a></li>
+    <li>Customer VPA Verification. Read more <a href="/payments/umap/notifications/customer-vpa-verification" target="_blank">here</a></li>
 </ul> 
