--- a/content/payments/umap/overview.mdx
+++ b/content/payments/umap/overview.mdx
@@ -31,3 +31,13 @@ UPI Merchant Acquiring Platform (UMAP) is a comprehensive UPI product suite desi
 -   **UPI Payments**: Enable all UPI payments using QR, Payment Links & In-app deployment with our APIs.
 -   **Recurring Mandates**: Customizable recurring payments with UPI Autopay for all your use cases.
 -   **UPI for Financial Services**: Enable BFSI specific products like Third Party Validation & Single Block Multi Debit.
+
+
+<NextPage
+    info={{
+        description:
+            "Get started with UMAP quickly",
+        slug: "/payments/umap/quickstart",
+        title: "Quickstart",
+    }}
+/>
