--- a/content/payments/umap/payments.mdx
+++ b/content/payments/umap/payments.mdx
@@ -5,9 +5,6 @@ order: 3
 visible_in_sidebar: true
 ---
 
-
-`TODO: add Prerequesites`
-
 # UPI Payments
 
 Unified Payments Interface (UPI) is a real-time payment system developed by the National Payments Corporation of India that facilitates inter-bank transactions through a mobile app. 
@@ -54,6 +51,18 @@ If a customer raises a dispute regarding a transaction, this API call allows for
 #### Initiate Refund
 
 In cases where a dispute arises or as a necessary step in the transaction process, a refund can be initiated. This API, typically prompted by the merchant, reverses the transaction amount to the customer.
+
+<Card padding="small" shape="rounded">
+    <Link href="/payments/umap/refunds-disputes">
+        <Element as="div">
+            <Text size="large" weight="600" textColor="blue-90">
+                Refunds & Disputes
+            </Text>
+            <Text weight="400">Manage your refunds and disputes.</Text>
+        </Element>
+    </Link>
+</Card>
+
 
 <hr class="primary" />
 
