lot of content & diagrams for mandates

--- a/content/payments/umap/mandates.mdx
+++ b/content/payments/umap/mandates.mdx
@@ -29,9 +29,9 @@ UPI Autopay is a recurring payments product built on the same rails of UPI which
     alt="Bridge"
 />
 
-### UPI autopay statuses
+### UPI mandate statuses
 
-A UPI autopay will flow through the below statuses throughout its lifecycle -
+A UPI autopay mandate will flow through the below statuses throughout its lifecycle -
 
 <img
     src="https://storage.googleapis.com/strapi-assets/latest/Frame_109/Frame_109.png"
