--- a/content/payments/umap/mandates/generic.mdx
+++ b/content/payments/umap/mandates/generic.mdx
@@ -5,7 +5,19 @@ order: 4
 visible_in_sidebar: true
 ---
 
-## Generic Operations
+## Mandate Operations
+A UPI Mandate itself is not a transaction, but rather a standing instruction on which transactions are carried out. Therefore, a status of a mandate can change just like
+updating an agreement between two parties. 
+
+There are four main operations that can happen on a UPI mandate after creation:
+<ul>
+    <li>Updating a mandate. Read more <a href="/payments/umap/mandates/generic/update" target="_blank">here</a></li>
+    <li>Revoking a mandate. Read more <a href="/payments/umap/mandates/generic/revoke" target="_blank">here</a></li>
+    <li>Pausing a mandate. Read more <a href="/payments/umap/mandates/generic/pause" target="_blank">here</a></li>
+    <li>Unpausing a paused mandate. Read more <a href="/payments/umap/mandates/generic/unpause" target="_blank">here</a></li>
+</ul>
+
+#### Explore our UPI Mandate Products
 
 <Card padding="small" shape="rounded">
     <a href="/payments/umap/mandates" target="_blank">
@@ -15,13 +27,3 @@ visible_in_sidebar: true
         Explore other UMAP UPI Autopay products here
     </p>
 </Card>
-
-<hr class="primary"/>
-
-Other operations that can be performed on a mandate once it is <b>LIVE</b>
-<ul>
-    <li>Updating a mandate. Read more <a href="/payments/umap/mandates/generic/update" target="_blank">here</a></li>
-    <li>Revoking a mandate. Read more <a href="/payments/umap/mandates/generic/revoke" target="_blank">here</a></li>
-    <li>Pausing a mandate. Read more <a href="/payments/umap/mandates/generic/pause" target="_blank">here</a></li>
-    <li>Unpausing a paused mandate. Read more <a href="/payments/umap/mandates/generic/unpause" target="_blank">here</a></li>
-</ul>
