--- a/content/payments/umap/mandates/generic/pause.mdx
+++ b/content/payments/umap/mandates/generic/pause.mdx
@@ -18,8 +18,10 @@ visible_in_sidebar: true
 
 <hr class="primary"/>
 
-Only the end customer has the option of pausing a UPI mandate from their UPI app and there is no merchant intervention required.
-
+<Callout type="tip">
+                Only customers can pause a UPI mandate from their UPI app and there is no merchant intervention required.
+            </Callout>
+<br/>
 <p>When a customer initiates mandate pause from their UPI app, UMAP will send notifications to the merchant for following events:</p>
 <ul>
     <li><b>mandate_operation.pause.initiated</b></li>
@@ -31,7 +33,7 @@ Only the end customer has the option of pausing a UPI mandate from their UPI app
 <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate pause operation notifications <a href="/payments/umap/notifications/mandates/pause">here</a></p>
 <p>The notifications are depicted in the below diagram</p>
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/mandate-pause/mandate-pause.png"
+  src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-customer-pause/update-mandate-customer-pause.png"
   alt="Bridge"
 />
 
@@ -43,7 +45,7 @@ Only the end customer has the option of pausing a UPI mandate from their UPI app
 
 <hr class="tertiary"/>
 
-#### Check mandate operation status
+#### Check mandate operation status (optional)
 
 After receiving pause operation initiated notification, the merchant can use this API to check the status of a mandate pause operation.
 
