--- a/content/payments/umap/mandates/generic/revoke.mdx
+++ b/content/payments/umap/mandates/generic/revoke.mdx
@@ -26,12 +26,12 @@ A mandate can be revoked by a merchant or aggregator via collect flow by calling
   tabs={[
     {
       key: "tab1",
-      label: "Collect based",
+      label: "Merchant Initiated",
       content: (
         <Text>
-            The process for revoking a mandate via collect flow is described in the below diagram
+            The process for revoking a mandate by the merchant is described in the below diagram
             <img
-                src="https://storage.googleapis.com/strapi-assets/latest/mandate-revoke-merchant/mandate-revoke-merchant.png"
+                src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-merchant-revoke/update-mandate-merchant-revoke.png"
                 alt="Bridge"
             />
             The merchant or aggregator will have to call the <b><i>rveoke mandate API</i></b> with the correct set of parameters.
@@ -119,12 +119,12 @@ A mandate can be revoked by a merchant or aggregator via collect flow by calling
     },
     {
       key: "tab2",
-      label: "Customer initiated",
+      label: "Customer Initiated",
       content: (
         <Text>
             The process for revoking a mandate initiated from the customer's UPI app is described in the below diagram
             <img
-                src="https://storage.googleapis.com/strapi-assets/latest/mandate-revoke/mandate-revoke.png"
+                src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-customer-revoke/update-mandate-customer-revoke.png"
                 alt="Bridge"
             />
             <p>Post this, once the customer initiates mandate revoke process on their UPI app, the merchant will receive webhooks for following events:</p>
@@ -153,7 +153,7 @@ A mandate can be revoked by a merchant or aggregator via collect flow by calling
 
 <hr class="tertiary"/>
 
-#### Check mandate operation status
+#### Check mandate operation status (optional)
 
 In addition to the notifications sent by UMAP, Merchant can use this API to check the status of a mandate revoke operation.
 
