--- a/content/payments/umap/mandates/generic/unpause.mdx
+++ b/content/payments/umap/mandates/generic/unpause.mdx
@@ -31,7 +31,7 @@ Only the end customer has the option of unpausing a paused UPI mandate from thei
 <p>Read more about mandate status notifications <a href="/payments/umap/notifications/mandates">here</a> and mandate unpause operation notifications <a href="/payments/umap/notifications/mandates/unpause">here</a></p>
 <p>The notifications are depicted in the below diagram</p>
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/mandate-unpause/mandate-unpause.png"
+  src="https://storage.googleapis.com/strapi-assets/latest/update-mandate-customer-unpause/update-mandate-customer-unpause.png"
   alt="Bridge"
 />
 
@@ -39,7 +39,7 @@ Only the end customer has the option of unpausing a paused UPI mandate from thei
 
 <hr class="tertiary"/>
 
-#### Check mandate operation status
+#### Check mandate operation status (optional)
 
 After receiving pause operation initiated notification, the merchant can use this API to check the status of a mandate unpause operation.
 
