--- a/content/payments/umap/mandates/otm.mdx
+++ b/content/payments/umap/mandates/otm.mdx
@@ -75,11 +75,6 @@ The first step to collect a payment via a one time mandate is for the merchant t
                 <li>Unpausing a paused one time mandate</li>
             </ul>
             These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
-            <h6>Mandate Creation - Intent Based Flows</h6>
-            <img
-    src="https://storage.googleapis.com/strapi-assets/latest/intent-mandate-creation/intent-mandate-creation.png"
-    alt="Bridge"
-/>
         </Text>
         ),
     },
@@ -117,11 +112,7 @@ The first step to collect a payment via a one time mandate is for the merchant t
                 <li>Pausing a one time mandate</li>
                 <li>Unpausing a paused one time mandate</li>
             </ul>
-            <h6>Mandate Creation - Collect Based flows</h6>
-            <img
-    src="https://storage.googleapis.com/strapi-assets/latest/collect-mandate-creation/collect-mandate-creation.png"
-    alt="Bridge"
-/>
+            These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
         </Text>
         ),
     },
