--- a/content/payments/umap/mandates/recurring/execute.mdx
+++ b/content/payments/umap/mandates/recurring/execute.mdx
@@ -21,15 +21,10 @@ visible_in_sidebar: true
 <Callout type="tip">
     Merchant intervention is only needed for an execution if <code>autoExecute</code> and <code>autoPreNotify</code> are set to <code>false</code> while creating a mandate 
 </Callout>
-
-Once the mandate pre debit notification is **successful**, the merchant can execute the mandate on the `executionDate` mentioned while sending the pre debit notification.
+<br/>
+Once the mandate pre debit notification is `successful`, the merchant can execute the mandate on the `executionDate` mentioned while sending the pre debit notification.
 
 The process for mandate execution is described in the below diagram:
-
-<img
-  src="https://storage.googleapis.com/strapi-assets/latest/mandate-pre-debit-notification/mandate-pre-debit-notification.png"
-  alt="Bridge"
-/>
 
 The merchant will have to call the **<i>execute mandate API</i>** with the correct set of parameters.
 
