--- a/content/payments/umap/mandates/single-block-multi-debit.mdx
+++ b/content/payments/umap/mandates/single-block-multi-debit.mdx
@@ -22,17 +22,17 @@ visible_in_sidebar: true
 
 A single block mutli debit mandate is a mandate that blocks a requested amount of funds in the customer's account and can be executed / debited multiple times against blocked funds.
 
-`TODO : Write a few lines on single block multi debit mandates`
-
 #### What can I do with a Single Block Multi Debit Mandate ?
-
-`TODO : Write a few lines on single block multi debit mandate use cases`
+Single block multi debit mandates combines the simplicity of wallets with the convenience of UPI. 
+* Enable try & buy COD orders for your D2C brand, debit only for unreturned apparel
+* Create in-app wallets by blocking funds on customer account and debiting for purchases
+* Power smart margin trading by blocking funds which are released on demand when needed
 
 <hr class="primary" />
 
 #### How it works
 
-Here is a typical list of steps involved in collecting a payment from a customer via an intent based single block multi debit mandate. Let’s use the example of `TODO: mention single block multi debit mandate use case`. In this scenario, the lender (`TODO: replace 'lender' based on use case mentioned`) is the Merchant partner that has integrated with Setu.
+These are the steps involved in collecting a payment from a customer via an intent based single block multi debit mandate.  
 
 <hr class="primary"/>
 
@@ -69,7 +69,7 @@ Other operations that can be performed on a single block multi debit mandate onc
     <li>Pausing a single block multi debit mandate</li>
     <li>Unpausing a paused single block multi debit mandate</li>
 </ul>
-
+These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
 <NextPage
     info={{
         description: "Create single block multi debit mandate.  ",
