--- a/content/payments/umap/mandates/recurring.mdx
+++ b/content/payments/umap/mandates/recurring.mdx
@@ -32,7 +32,10 @@ Recurring mandates help merchants seamless collect money multiple times with a s
 
 #### How it works
 
-The first step to collect a payment via a recurring mandate is for the **Merchant** to create a recurring mandate. There are 2 ways in which a recurring mandate can be created: **Intent based**, **Collect based**
+The first step to collect a payment via a recurring mandate is for the **Merchant** to create a recurring mandate. There are 2 ways in which a recurring mandate can be created:<br/><br/>
+**Intent based :** Intent based mandates are always initiated by user through merchant app or by scanning a QR code. 
+
+**Collect based** Collect based mandates are initated by merchant by taking user's VPA as an input and creating a request.
 
 <Tabs
   tabs={[
@@ -41,7 +44,7 @@ The first step to collect a payment via a recurring mandate is for the **Merchan
       label: "Intent based",
       content: (
         <Text>
-            Here is a typical list of steps involved in collecting a payment from a customer via an intent based recurring mandate. Let’s use the example of `TODO: mention recurring mandate use case`. In this scenario, the lender (`TODO: replace 'lender' based on use case mentioned`) is the Merchant partner that has integrated with Setu.<br/>
+            These are the list of steps involved in collecting a payment from a customer using a recurring mandate in intent flow.<br/>
             {" "}<br/>
             <hr class="primary"/>
             <h6>Step 1 - create a recurring mandate</h6>
@@ -77,6 +80,7 @@ The first step to collect a payment via a recurring mandate is for the **Merchan
                 <li>Pausing a recurring mandate</li>
                 <li>Unpausing a paused recurring mandate</li>
             </ul>
+            These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
         </Text>
         ),
     },
@@ -120,6 +124,7 @@ The first step to collect a payment via a recurring mandate is for the **Merchan
                 <li>Pausing a recurring mandate</li>
                 <li>Unpausing a paused recurring mandate</li>
             </ul>
+            These have been detailed in the <b>Mandate Operations</b> section within UPI Mandates
         </Text>
         ),
     },
