more content & diagram changes

--- a/content/payments/umap/notifications.mdx
+++ b/content/payments/umap/notifications.mdx
@@ -32,7 +32,12 @@ visible_in_sidebar: true
 
 <hr class="primary"/>
 
-UMAP sends notifications to merchants for the following products
+UMAP has a robust notification system to provide a transparent experience for our merchants.  
+* Repetitive retries to ensure notification delivery to customers
+* Comprehensive coverage across all financial and non-financial flows
+* Configurable notification endpoints at merchant and aggregator levels
+
+Understand our notification payloads for each of our products.
 <ul>
     <li>Payments. Read more <a href="/payments/umap/notifications/payments" target="_blank">here</a></li>
     <li>Mandates. Read more <a href="/payments/umap/notifications/mandates" target="_blank">here</a></li>
