--- a/content/payments/umap/notifications/disputes.mdx
+++ b/content/payments/umap/notifications/disputes.mdx
@@ -18,19 +18,18 @@ visible_in_sidebar: true
 
 <hr class="primary"/>
 
-### Dispute Statuses
+#### Dispute Statuses
 
-UMAP is fully integrated with the National Payments Corporation of India's (NPCI) Unified Dispute & Issue Resolution (UDIR) framework. This integration allows merchants to handle refunds and resolve disputes efficiently, enhancing customer satisfaction while minimizing the risk of chargebacks and false disputes.
+`Dispute Open :` A dispute has been created by a customer. 
 
-**Dispute Open:** The process begins when UMAP informs a merchant of a customer-initiated dispute concerning a transaction. At this stage, the merchant is given a specific timeframe to either contest the dispute or accept it.
+`Dispute Closed :` Merchant accepted dispute and issued a refund. 
 
-**Dispute In Review:** If the merchant opts to contest the dispute, the case moves to the "In Review" status. Here, the merchant is required to submit evidence supporting their position. This evidence is then reviewed and presented to the customer as part of the resolution process.
+`Dispute In-Review :` Merchant has contested dispute and has provided evidence. 
 
-**Dispute Won:** This status indicates that the merchant has successfully contested the dispute, with the submitted evidence being sufficient to resolve the dispute in their favor. No further action is required from the merchant at this point.
+`Dispute Won :` Merchant evidence accepted. No chargeback required. 
 
-**Dispute Lost:** If the merchant is unable to provide convincing evidence, or if the evidence is deemed insufficient, the dispute is resolved in favor of the customer. The merchant must then refund the disputed amount to the customer.
+`Dispute Lost :` Merchant evidence rejected. Chargeback is created. 
 
-**Dispute Closed:** This is the conclusive stage of the dispute resolution process. It is reached after a dispute is either won or lost. In cases where the dispute is won by the merchant, this status is automatically assigned without requiring any further action. Conversely, if the dispute is lost, this status is achieved once the disputed amount has been refunded to the customer.
 
 The UMAP platform's seamless integration with the UDIR framework ensures that merchants can provide prompt and efficient resolutions to disputes, safeguarding both their interests and those of their customers.
 
