--- a/content/payments/umap/refunds-disputes.mdx
+++ b/content/payments/umap/refunds-disputes.mdx
@@ -45,7 +45,7 @@ This comprehensive approach ensures that merchants can efficiently manage refund
         <Text>
             <h4>Refund Process</h4>
             <img
-                src="https://storage.googleapis.com/strapi-assets/latest/refund-process/refund-process.png"
+                src="https://storage.googleapis.com/strapi-assets/latest/refund-flow-online_flow/refund-flow-online_flow.png"
                 alt="Bridge"
             />
             <hr class="primary"/>
@@ -64,17 +64,12 @@ This comprehensive approach ensures that merchants can efficiently manage refund
             <p>In addition to the notifications, merchants can use <b>check refund status API</b> to check if a refund is successful</p>
             <hr class="primary"/>
             <h4>Refund Statuses</h4>
-            <p>UMAP equips merchants with a straightforward, API-based mechanism to process refunds directly to the customer's bank account originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution.</p>
-            <h6>Refund Initiated</h6>
-            <p>This status marks the beginning of the refund process, where the merchant has successfully submitted a refund request, and it has been forwarded to NPCI for processing.</p>
-            <h6>Refund Pending</h6>
-            <p>At this stage, the refund is in process. Refunds are processed in cycles, and the amount to be refunded is temporarily deducted from the merchant's settlement amount. This intermediary state reflects the ongoing processing before final resolution.</p>
-            <h6>Refund Successful</h6>
-            <p>This indicates the successful completion of the refund process by NPCI, with the funds being reverted back to the customer's bank account. It signifies the resolution of the refund request in favor of the customer.</p>
-            <h6>Refund Failed</h6>
-            <p>If the refund process encounters issues—such as the customer's bank account being inactive or blocked—the refund fails. This status alerts the merchant to the unsuccessful refund attempt, necessitating further action to resolve the issue.</p>
+            <li><b>Refund Initiated :</b> Refund request has been create at UMAP</li>
+            <li><b>Refund Pending :</b> Refund is in queue for being processed</li>
+            <li><b>Refund Successful :</b> Refund has been successfully completed</li>
+            <li><b>Refund Failed :</b> Refund could not be processed</li>
             <img
-                src="https://storage.googleapis.com/strapi-assets/latest/refund-statuses/refund-statuses.png"
+                src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
                 alt="Bridge"
             />
             <NextPage
@@ -118,19 +113,13 @@ This comprehensive approach ensures that merchants can efficiently manage refund
             <p>If the merchant does not prevail, a refund is issued to the customer for the disputed transaction.</p>
             <hr class="primary"/>
             <h4>Dispute Statuses</h4>
-            <p>UMAP is fully integrated with the National Payments Corporation of India's (NPCI) Unified Dispute & Issue Resolution (UDIR) framework. This integration allows merchants to handle refunds and resolve disputes efficiently, enhancing customer satisfaction while minimizing the risk of chargebacks and false disputes.</p>
-            <h6>Dispute Open</h6>
-            <p>The process begins when UMAP informs a merchant of a customer-initiated dispute concerning a transaction. At this stage, the merchant is given a specific timeframe to either contest the dispute or accept it.</p>
-            <h6>Dispute In Review</h6>
-            <p>If the merchant opts to contest the dispute, the case moves to the "In Review" status. Here, the merchant is required to submit evidence supporting their position. This evidence is then reviewed and presented to the customer as part of the resolution process.</p>
-            <h6>Dispute Won</h6>
-            <p>This status indicates that the merchant has successfully contested the dispute, with the submitted evidence being sufficient to resolve the dispute in their favor. No further action is required from the merchant at this point.</p>
-            <h6>Dispute Lost</h6>
-            <p>If the merchant is unable to provide convincing evidence, or if the evidence is deemed insufficient, the dispute is resolved in favor of the customer. The merchant must then refund the disputed amount to the customer.</p>
-            <h6>Dispute Closed</h6>
-            <p>This is the conclusive stage of the dispute resolution process. It is reached after a dispute is either won or lost. In cases where the dispute is won by the merchant, this status is automatically assigned without requiring any further action. Conversely, if the dispute is lost, this status is achieved once the disputed amount has been refunded to the customer.</p>
+            <li><b>Dispute Open :</b> A dispute has been created by a customer</li>
+            <li><b>Dispute Closed :</b> Merchant accepted dispute and issued a refund</li>
+            <li><b>Dispute In-Review :</b> Merchant has contested dispute and has provided evidence</li>
+            <li><b>Dispute Won :</b> Merchant evidence accepted. No chargeback required</li>
+            <li><b>Dispute Lost :</b> Merchant evidence rejected. Chargeback is created </li>
             <img
-                src="https://storage.googleapis.com/strapi-assets/latest/dispute-statuses/dispute-statuses.png"
+                src="https://storage.googleapis.com/strapi-assets/latest/Frame_73/Frame_73.png"
                 alt="Bridge"
             />
             <NextPage
