--- a/content/payments/umap/notifications/mandates.mdx
+++ b/content/payments/umap/notifications/mandates.mdx
@@ -20,10 +20,22 @@ visible_in_sidebar: true
 
 ### UPI Mandate Statuses
 
-A UPI mandate will flow through the below statuses throughout its lifecycle -
+A UPI mandate will flow through the below statuses throughout its lifecycle  
+
+`Mandate Initiated :` A mandate creation request has been initiated. 
+
+`Mandate Live :` Customer authorization received & mandate is now active. 
+
+`Mandate Complete :` Mandate executions are done, and now mandate is closed.  
+
+`Mandate Rejected:` Due to error or no authorization, mandate could not be created.   
+
+`Mandate Paused:` Customer has decided to temporarily stop executions on mandate.   
+
+`Mandate Revoked:` Mandate was closed by customer or merchant before expiry. 
 
 <img
-    src="https://storage.googleapis.com/strapi-assets/latest/upi-mandate-statuses/upi-mandate-statuses.png"
+    src="https://storage.googleapis.com/strapi-assets/latest/Frame_109/Frame_109.png"
     alt="Bridge"
 />
 
