--- a/content/payments/umap/notifications/refunds.mdx
+++ b/content/payments/umap/notifications/refunds.mdx
@@ -22,16 +22,13 @@ visible_in_sidebar: true
 
 UMAP equips merchants with a straightforward, API-based mechanism to process refunds directly to the customer's bank account originally used for the transaction. This capability not only enhances customer satisfaction through quick and efficient refunds but also streamlines dispute resolution.
 
-**Refund Initiated:** This status marks the beginning of the refund process, where the merchant has successfully submitted a refund request, and it has been forwarded to NPCI for processing.
-
-**Refund Pending:** At this stage, the refund is in process. Refunds are processed in cycles, and the amount to be refunded is temporarily deducted from the merchant's settlement amount. This intermediary state reflects the ongoing processing before final resolution.
-
-**Refund Successful:** This indicates the successful completion of the refund process by NPCI, with the funds being reverted back to the customer's bank account. It signifies the resolution of the refund request in favor of the customer.
-
-**Refund Failed:** If the refund process encounters issues—such as the customer's bank account being inactive or blocked—the refund fails. This status alerts the merchant to the unsuccessful refund attempt, necessitating further action to resolve the issue.
-
+#### Refund Statuses
+`Refund Initiated :` Refund request has been create at UMAP<br/><br/>
+`Refund Pending :` Refund is in queue for being processed<br/><br/>
+`Refund Successful :` Refund has been successfully completed<br/><br/>
+`Refund Failed :` Refund could not be processed<br/><br/>
 <img
-  src="https://storage.googleapis.com/strapi-assets/latest/refund-statuses/refund-statuses.png"
+  src="https://storage.googleapis.com/strapi-assets/latest/Frame_74/Frame_74.png"
   alt="Bridge"
 />
 
